--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,12 @@
     <title>Home Page</title>
 </head>
 <body>
-    From HTML
     <h1>
-        html h1 tag
+        Home Page
     </h1>
+    <a href="/login">Login</a>
+    <br>
+    <br>
+    <a href="/about">About Page</a>
 </body>
 </html>
